# blackout

./: .gitignore  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/workflows/: release.yml
app/: package-lock.json  package.json
app/quickaction/: install-quickaction.sh
app/src/: index.html  main.js  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/plugins/blackout-droid/: Cargo.toml  build.rs
app/src-tauri/plugins/blackout-droid/android/: .gitignore  build.gradle.kts
app/src-tauri/plugins/blackout-droid/android/src/main/java/com/plugin/blackout_droid/: BlackoutDroidPlugin.kt
app/src-tauri/plugins/blackout-droid/permissions/autogenerated/: reference.md
app/src-tauri/plugins/blackout-droid/permissions/autogenerated/commands/: clear_clipboard.toml  open_panel.toml  opsec_facts.toml
app/src-tauri/plugins/blackout-droid/permissions/schemas/: schema.json
app/src-tauri/plugins/blackout-droid/src/: lib.rs
app/src-tauri/src/: clean.rs  lib.rs  main.rs  watch.rs
crates/blackout-cli/: Cargo.toml
crates/blackout-cli/src/: main.rs
crates/blackout-core/: Cargo.toml
crates/blackout-core/src/: filetype.rs  findings.rs  lib.rs
crates/blackout-core/src/cleaner/: audio.rs  document.rs  image.rs  mod.rs  pdf.rs  video.rs
crates/blackout-platform/: Cargo.toml
crates/blackout-platform/src/: android.rs  android_facts.rs  ios.rs  lib.rs  macos.rs  other.rs
scripts/: make_fixtures.py
