[workspace]
resolver = "2"
members = ["crates/blackout-core", "crates/blackout-platform", "crates/blackout-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = ""
authors = ["BLACKOUT contributors"]

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
