[package]
name = "blackout-core"
description = "BLACKOUT CLEAN engine — local, offline removal of hidden file metadata."
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
img-parts = "0.3"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
lopdf = "0.34"
serde = { version = "1", features = ["derive"] }
kamadak-exif = "0.6"
